# Test-Task-MB-Digital

./: Dockerfile  README.md  pyproject.toml
api/: urls.py
config/: settings.py  urls.py
src/config/: settings.py
teams/: admin.py  models.py  permissions.py  urls.py
teams/migrations/: 0001_initial.py  0002_initial.py
teams/serializers/api/: members.py  teams.py
teams/views/: members.py  teams.py
users/: admin.py  managers.py  models.py  urls.py
users/migrations/: 0001_initial.py
users/serializers/api/: users.py
users/serializers/nested/: users.py
users/views/: users.py
